[package]
name = "rusty-glomers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
serde_with = "*"

rand = "0.8.5"
tokio = {version = "1.28.2", features = ["full"]}
tokio-stream = "0.1.6"
log = "0.4"
log4rs = "1.2.0"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
